--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ justify-content: center;
   margin-right: 15%;
   border-radius: 10px;
   transition: all 0.4s;
-  background: #f0eeee38;
+  background: #83838338;
   box-shadow:  20px 20px 60px #f3efef6c, -20px -20px 60px #fcf6f6;
   text-align: center;
   margin-bottom: 2%;
@@ -68,6 +68,7 @@ justify-content: center;
 }
 .block button{
   cursor: pointer;
+  
 }
 
 .addMovies{
@@ -92,6 +93,9 @@ justify-content: center;
   margin-top: 2%; 
 }
 
-
+.rating{
+  border: 1px solid #838383ef;
+  top: 16%;
+}
 /* end navbar */
 
