--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.App{
+  background-color: #DAD992;
+}
+
+
 /* start moviesList */
 .movies{
 display: grid;
@@ -10,23 +15,26 @@ justify-content: center;
     transition: all 0.4s;
 }
 .groupes{
-  margin-top: 15%;
+  margin-top: 20%;
   margin-left: 20%;
   margin-right: 15%;
   border-radius: 10px;
   transition: all 0.4s;
-  background: #83838338;
-  box-shadow:  20px 20px 60px #f3efef6c, -20px -20px 60px #fcf6f6;
+  background: #FFFEA9;
+  box-shadow:  20px 20px 60px #8584845e, -20px -20px 60px #c1cfc06e;
   text-align: center;
-  margin-bottom: 2%;
+  padding-top: 3%;
+  padding-bottom: 1%;
 }
 .groupes img{
-  width: 60%;
+  width: 65%;
 }
 .groupes .title{
   font-size: 20px;
-  font-weight: normal;
-  margin-left: 8%;
+  font-weight: 500;
+  margin-left: 7%;
+  color: #1b4161;
+  margin-top: 3%;
 }
 
 .groupes h2{
@@ -45,17 +53,19 @@ justify-content: center;
   cursor: pointer;
   font-size: 20px;
   padding-bottom: 2%;
-  color: black;
+  color: #1b4161;
+  
 }
 /* end moviesList */
 
 /* start navbar */
 .nav{
   display: flex;
+  background-color: #F3ED9E;
 }
 .block{
   margin-left: 50%;
-  margin-top: 4%;
+  margin-top: 1%;
 }
 .block .add{
   margin-left: 20px;
@@ -63,12 +73,21 @@ justify-content: center;
 .nav h1{
   margin-left: 5%;
   font-size: 30px;
-  font-weight: normal;
-  margin-top: 3%;
+  font-weight: 400;
+  margin-top: 1%;
+  color: #1b4161;
 }
+
 .block button{
   cursor: pointer;
-  
+  border: 2px solid #12304993;
+  padding: 3px;
+  margin-left: 10px;
+}
+.block input{
+  border: 2px solid #12304993;
+  padding: 3px;
+  margin-right: 10px;
 }
 
 .addMovies{
@@ -79,23 +98,59 @@ justify-content: center;
   width: 35%;
   padding: 1%;
   border-radius: 10px;
- 
 }
 .addMovies input{
   margin-bottom: 3%;
   padding: 3%;
 }
-
 .addMovies button{
   padding: 2%;
-  width: 40%;
+  width: 50%;
   margin-left: 30%;
   margin-top: 2%; 
+  color: #FFFEA9;
+  border: none;
+  background-color: #123049e0;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 .rating{
-  border: 1px solid #838383ef;
-  top: 16%;
+  border: 2px solid #12304993;
+  top: 12%;
 }
+.movies button{
+  cursor: pointer;
+  margin-top: 2%;
+  border: 2px solid #12304993;
+  padding: 5px;
+  width: 50%;
+}
+
 /* end navbar */
+
+/* Start Description */
+.description {
+  margin: 8%;
+}
+.description h1{
+  font-weight: 400;
+  color: #12304993;
+}
+.description h3{
+  font-size: 20px;
+  color: #002D40;
+  width: 50%;
+}
+
+.description button{
+  margin-top: 9px;
+  padding: 5px;
+  width: 10%;
+  margin-left: 5%;
+  font-size: 15px;
+}
+
+
+/* End Description */
 
